# docx-mcp

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.gdrive  Dockerfile.koyeb  Dockerfile.proxy  Dockerfile.storage-cloudflare  Dockerfile.storage-local  DocxMcp.sln  README.md  build.sh  deny.toml  docker-compose.yml  koyeb.yaml  publish.sh
.claude/: settings.local.json
.github/scripts/: extract-version.sh  generate-release-notes.sh  prepare-release-assets.sh
.github/workflows/: deploy-website.yml  docker-build.yml
crates/docx-mcp-sse-proxy/: Cargo.toml  Dockerfile
crates/docx-mcp-storage/: Cargo.toml
crates/docx-storage-cloudflare/: Cargo.toml  Dockerfile
crates/docx-storage-cloudflare/src/: config.rs  kv.rs  main.rs  service.rs
crates/docx-storage-cloudflare/src/storage/: r2.rs
crates/docx-storage-cloudflare/src/sync/: r2_sync.rs
crates/docx-storage-gdrive/: Cargo.toml  Dockerfile
crates/docx-storage-gdrive/src/: browse.rs  config.rs  d1_client.rs  gdrive.rs  main.rs  service_sync.rs  service_watch.rs  sync.rs  token_manager.rs  watch.rs
crates/docx-storage-local/: Cargo.toml  Dockerfile
infra/: Pulumi.prod.yaml  __main__.py  env-setup.sh  koyeb-fix-routes.sh  requirements.txt
installers/macos/: build-dmg.sh  build-pkg.sh
installers/windows/: docx-mcp.iss
proto/: storage.proto
scripts/: coverage.sh
src/: docx_handler.rs
src/DocxMcp/: DocxMcp.csproj  Program.cs  SessionManager.cs  SessionManagerPool.cs  SessionRestoreService.cs  SyncManager.cs  TenantScope.cs
src/DocxMcp.Cli/: DocxMcp.Cli.csproj  Program.cs  WatchDaemon.cs
src/DocxMcp.Grpc/: DocxMcp.Grpc.csproj  GrpcLauncher.cs  HistoryStorageClient.cs  IHistoryStorage.cs  IStorageClient.cs  ISyncStorage.cs  InMemoryPipeStream.cs  NativeStorage.cs  StorageClient.cs  StorageClientOptions.cs  SyncStorageClient.cs  TenantContext.cs
src/DocxMcp.WordAddin/: DocxMcp.WordAddin.csproj  Program.cs
tests/: docx_handler_tests.rs
tests/DocxMcp.Tests/: AutoSaveTests.cs  CommentTests.cs  ConcurrentPersistenceTests.cs  CountToolTests.cs  DiffEngineTests.cs  DocxMcp.Tests.csproj  ExternalChangeTrackerTests.cs  ExternalSyncTests.cs  PatchLimitTests.cs  PatchResultTests.cs  QueryPaginationTests.cs  QueryRoundTripTests.cs  QueryTests.cs  ReadHeadingContentTests.cs  ReadSectionTests.cs  RevisionTests.cs  SessionPersistenceTests.cs  StyleTests.cs  SyncDuplicateTests.cs  TableModificationTests.cs  TestHelpers.cs  UndoRedoTests.cs
website/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
website/migrations/: 0004_user_preferences.sql  (+2 more)
word-addin/: manifest.xml  package.json
(+103 files in other folders)
